--- a/public/form.html
+++ b/public/form.html
@@ -31,14 +31,14 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="appealText">Why do you feel you should be unbanned?</label>
+                    <label for="appealText">Do you think that your ban was a mistake?</label>
                     <div class="textInput">
                         <textarea class="form-control" id="appealText" name="appealText" required maxlength="1024"></textarea>
                         <div class="remainingLength"></div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="futureActions">What will you do to avoid being banned in the future?</label>
+                    <label for="futureActions">Is there anything else you would like us to know?</label>
                     <div class="textInput">
                         <textarea class="form-control" id="futureActions" name="futureActions" required maxlength="1024"></textarea>
                         <div class="remainingLength"></div>
