--- a/public/error.html
+++ b/public/error.html
@@ -13,8 +13,9 @@
     <body class="d-flex h-100 justify-content-center align-items-center">
         <div class="text-center">
             <h1 id="msg" style="color: #f04747;">
-                It seems like your Discord account isn't banned<br>
-                Try joining the server from a different IP. Invite Link: https://discord.com/invite/knhjAckkbs
+                It seems like your Discord account isn't banned <br>
+                Try joining the server from a different IP <br>
+                Invite Link: https://discord.com/invite/knhjAckkbs
             </h1>
             <a href="/" class="text-white">Back to beginning</a>
         </div>
